docs: Recommend separate Gradle module for Compose + native interop
Add guidance on integrating Nucleus Native Access with Compose Desktop.
The Compose compiler plugin conflicts with arbitrary Kotlin/Native targets,
so the recommended approach is to use a separate module for native bridge code.